<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outsideRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_dark_transparent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.screen.add_event.AddEventFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="600dp"
            android:layout_height="72dp"
            android:background="@color/mariner"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/dismissFragmentImageButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_close_white_32dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="38dp"
                android:layout_toEndOf="@id/dismissFragmentImageButton"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/add_meeting"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:id="@+id/bookRoomImageButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/add_event_check_src"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="56dp"
            android:divider="?android:attr/dividerHorizontal"
            android:dividerPadding="5dip"
            android:showDividers="middle|end">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/from"
                    android:textColor="@color/dove_gray"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fromDateMaterialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:gravity="bottom|center_horizontal"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="TUE, JUL 09" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fromTimeMaterialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="12:55" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:gravity="end">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/to"
                    android:textColor="@color/dove_gray"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/toDateMaterialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:gravity="bottom|center_horizontal"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="TUE, JUL 09" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/toTimeMaterialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="12:55" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:gravity="end">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/room"
                    android:textColor="@color/dove_gray"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/selectedRoomMaterialTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="Cambridge" />

            </TableRow>

        </TableLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/select_popular_duration"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/durationSelectorChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:singleSelection="true">

            <com.provectus_it.bookme.ui.custom_view.DurationChip
                android:id="@+id/firstTimeDurationChip"
                android:layout_width="120dp"
                android:layout_height="32dp" />

            <com.provectus_it.bookme.ui.custom_view.DurationChip
                android:id="@+id/secondTimeDurationChip"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="56dp" />

            <com.provectus_it.bookme.ui.custom_view.DurationChip
                android:id="@+id/thirdTimeDurationChip"
                android:layout_width="120dp"
                android:layout_height="32dp" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/available_rooms"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/wild_sand" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/availableRoomsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noRoomsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/there_are_no_rooms"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>