<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context=".ui.screen.start.StartFragment">

    <RelativeLayout
        android:id="@+id/stateContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_weight="409">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_fragment_state_margin_start"
            android:layout_marginTop="@dimen/start_fragment_state_margin_top"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/roomStateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/start_fragment_state_text_size"
                    tools:text="FREE" />

                <TextView
                    android:id="@+id/stateTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/start_fragment_until_text_size"
                    tools:text="until 13:30" />

            </LinearLayout>

            <com.provectus_it.bookme.ui.custom_view.CountdownView
                android:id="@+id/stateCountdown"
                android:layout_width="@dimen/start_fragment_state_countdown_width"
                android:layout_height="@dimen/start_fragment_state_countdown_height"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="28dp"
                custom:background="@drawable/countdown_background_shape"
                custom:progressDrawable="@drawable/countdown_wide_circle_shape" />

        </LinearLayout>

        <ImageView
            android:id="@+id/startFragmentBackSwipeButtonFrame"
            android:layout_width="35dp"
            android:layout_height="136dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/start_fragment_swipe_button_frame"/>

        <ImageButton
            android:id="@+id/startFragmentBackSwipeImageButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/start_fragment_swipe_button_background"
            android:scaleType="fitXY"
            android:src="@drawable/start_fragment_swipe_button"/>

        <TextView
            android:id="@+id/roomNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="76dp"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="37dp"
            android:textColor="@color/white"
            android:textSize="@dimen/start_fragment_room_info_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="76dp"
            android:layout_toEndOf="@+id/roomNameTextView"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/hiddenStatusView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_visibility_white"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/roomCapacityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:drawableBottom="@drawable/ic_users_white"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/start_fragment_room_info_text_size" />

            <TextView
                android:id="@+id/tvTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:drawableBottom="@drawable/ic_tv_white"
                android:gravity="center"
                android:text="@string/tv"
                android:textColor="@color/white"
                android:textSize="@dimen/start_fragment_room_info_text_size" />

            <TextView
                android:id="@+id/roomFloorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:drawableBottom="@drawable/ic_stairs_white"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/start_fragment_room_info_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkinCheckoutLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/startFragmentBackSwipeImageButton"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/checkinCheckoutMaterialButton"
                android:layout_marginTop="@dimen/start_fragment_checkin_checkout_material_button_margin_top"
                android:layout_width="@dimen/start_fragment_checkin_checkout_material_button_width"
                android:layout_height="@dimen/start_fragment_checkin_checkout_material_button_height"
                android:backgroundTint="@color/three_quarters_transparent_black"
                android:fontFamily="@font/roboto_medium"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:text="@string/check_in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/checkin_checkout_material_button_text_size"
                custom:cornerRadius="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/bookNowAndQuickBookingButtonsLayout"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/startFragmentBackSwipeImageButton"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookNowTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_horizontal"
                android:text="@string/book_now"
                android:textColor="@color/white"
                android:textSize="@dimen/start_fragment_book_now_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <com.provectus_it.bookme.ui.custom_view.DurationMaterialButton
                    android:id="@+id/firstTimeDurationMaterialButton"
                    android:layout_width="@dimen/start_fragment_duration_material_button_width"
                    android:layout_height="@dimen/start_fragment_duration_material_button_height" />

                <com.provectus_it.bookme.ui.custom_view.DurationMaterialButton
                    android:id="@+id/secondTimeDurationMaterialButton"
                    android:layout_width="@dimen/start_fragment_duration_material_button_width"
                    android:layout_height="@dimen/start_fragment_duration_material_button_height"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp" />

                <com.provectus_it.bookme.ui.custom_view.DurationMaterialButton
                    android:id="@+id/thirdDurationMaterialButton"
                    android:layout_width="@dimen/start_fragment_duration_material_button_width"
                    android:layout_height="@dimen/start_fragment_duration_material_button_height" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="703"
        android:background="@color/white">

        <Button
            android:id="@+id/openDevSettingsPanelButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="82dp"
            android:textColor="@color/mine_shaft"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="102dp"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="35dp"
            android:textColor="@color/mine_shaft"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/scheduleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="156dp"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="28dp"
            android:text="@string/schedule"
            android:textColor="@color/mariner"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="188dp"
            android:background="@color/wild_sand" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="188dp">

            <com.provectus_it.bookme.ui.custom_view.HideableMaterialButton
                android:id="@+id/previousEventButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:text="@string/show_previous_events"
                app:icon="@drawable/ic_arrow_upward_24px"
                app:iconGravity="textStart" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="44dp"
                android:paddingBottom="16dp"
                app:layout_behavior=".util.behavior.HideableMaterialScrollingButtonBehavior" />

            <ImageView
                android:id="@+id/BookMeTeamImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/general"
                android:visibility="gone" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bookCurrentRoomFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="25dp"
            custom:backgroundTint="@color/mariner"
            custom:srcCompat="@drawable/ic_add_white_24dp"
            custom:tint="@android:color/white" />

    </RelativeLayout>

</LinearLayout>